@@ -1,6 +1,16 @@
 1.3.8 (SVN/unreleased)
 ======================
 
+ * Cook resources after GS profile import.
+   [fschulze]
+
+ * Added missing enabled property handling to updateScript.
+   [fschulze]
+
+ * Fixed typo which prevented position-after/insert-after in GS profiles to
+   work.
+   [fschulze]
+
 1.3.7
 =====
 
